--- a/css/d_new.css
+++ b/css/d_new.css
@@ -90,32 +90,62 @@
     display: none;
   }
 }
-@media screen and (max-width: 885px) {
+@media screen and (max-width: 900px) {
+  .new-prd-box .tag {
+    width: 48%;
+    left: -2px;
+  }
   .new-prd-box .prd-name {
-    font-size: 16px;
+    margin-top: 4%;
   }
-  .new-prd-box .prd-category {
-    font-size: 14px;
-    margin-top: 8px;
-  }
-  .new-prd-box .price {
-    font-size: 18px;
-    margin-bottom: 5px;
+  .tag-olive {
+    width: 24%;
+    position: absolute;
+    top: 20px;
+    left: -2px;
   }
 }
 @media screen and (max-width: 768px) {
-  .new-prd-box .tag {
-    width: 45%;
-    left: 0;
-    margin-bottom: 10px;
-  }
   .new-prd-box .prd-name {
-    margin-top: 6px;
+    margin-top: 2%;
   }
   .tag-olive {
-    width: 22.5%;
+    width: 24%;
     position: absolute;
     top: 20px;
-    left: 0;
+    left: -2px;
+  }
+}
+@media screen and (max-width: 650px) {
+  .new-prd-box .tag {
+    width: 40%;
+    left: -2px;
+  }
+  .new-prd-box .prd-name {
+    margin-top: 3%;
+  }
+  .tag-olive {
+    width: 20%;
+  }
+}
+@media screen and (max-width: 529px) {
+  .new-prd-box .tag {
+    width: 35%;
+    left: -2px;
+  }
+  .new-prd-box .prd-name {
+    margin-top: 2%;
+  }
+  .tag-olive {
+    width: 17.5%;
+  }
+}
+@media screen and (max-width: 420px) {
+  .new-prd-box .tag {
+    width: 40%;
+    left: -2px;
+  }
+  .tag-olive {
+    width: 20%;
   }
 }
