--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 @import url(h_service.css);
 @import url(i-footer.css);
 @import url(upbtn_modal.css);
-.b_visual{
+.b_visual {
   height: 36vw;
 }
 * {
@@ -38,6 +38,26 @@ h2 {
   color: var(--color--dark--x-l);
   margin: 15% 0 4% 0;
 }
+/* h2 반응형 */
+@media screen and (max-width: 768px) {
+  h2 {
+    width: 100%;
+    font-size: 25px;
+    font-weight: 700;
+    color: var(--color--dark--x-l);
+    margin: 20% 0 7% 0;
+  }
+}
+@media screen and (max-width: 390px) {
+  h2 {
+    width: 100%;
+    font-size: 20px;
+    font-weight: 700;
+    color: var(--color--dark--x-l);
+    margin: 20% 0 7% 0;
+  }
+}
+
 .wrap-inner {
   width: 80%;
   max-width: 1100px;
