--- a/css/b_visual.css
+++ b/css/b_visual.css
@@ -3,62 +3,73 @@
 .b_visual {
   position: relative;
   width: 100%;
+  height: 36vw;
   display: flex;
   justify-content: center;
   text-align: center;
   margin: auto;
   /* background-color: red; */
-  height: 36vw;
 }
 
 /* 전체영역-반응형 */
-.visual-ta {
-  display: none;
-}
-.visual-mb {
-  display: none;
-}
-.swiper-slide > img {
+.visual-de {
   width: 100%;
   display: block;
   margin: auto;
 }
+.visual-ta {
+  width: 100%;
+  display: none;
+  margin: auto;
+}
+.visual-mb {
+  width: 100%;
+  display: none;
+  margin: auto;
+}
 
-/* b_visual inner*/
-.visual-inner{
+/* 배너 이미지 */
+.swiper-slide > img {
+  width: 40%;
+  display: block;
+  margin: auto;
+}
+
+/* 배너 박스 + b_visual inner*/
+.visual-inner {
   width: 80%;
   max-width: 1100px;
-  background-color: bisque;
+  /* background-color: bisque; */
   margin: auto;
 }
 /* box-txt */
 .box-txt {
+  position: absolute;
+  z-index: 2;
+  left: 636px;
+  bottom: -58px;
   text-align: left;
   width: 450px;
   height: 190px;
   background-color: #fff;
-  position: absolute;
-  top: 550px;
-  left: 620px;
   transform: translate(-50%, -50%);
-  padding: 30px;
+  padding: 35px;
 }
-
 .box-txt > h4 {
-  font-size: var(--font--fontsize--s);
-  padding-bottom: 3%;
-  color: var(--color--dark--x-l);
+  font-size: 24px;
   font-weight: 600;
+  padding-bottom: 2%;
+  color: var(--color--dark--x-l);
 }
 .box-txt > p {
-  font-size: var(--font--fontsize--x-s);
-  line-height: 20px;
+  font-size: 14px;
+  line-height: 18px;
 }
 /* 살펴보기 버튼+슬라이드 버튼img */
 .box-txt-wrap {
   position: absolute;
   bottom: 13%;
-  right: 5%;
+  right: 6%;
 }
 /* 살펴보기 버튼 */
 .b_visual-btn {
@@ -67,49 +78,46 @@
   padding: 10px 20px;
   border: 1px solid #222;
   text-decoration: none;
+  color: #222;
 }
 
-/* 반응형 */
+/* ===============반응형===================== */
 @media screen and (max-width: 1920px) {
   /* 비주얼 배너이미지 */
 }
-@media screen and (max-width: 768px) {
-  /* 전체영역 */
-  .b_visual {
-    width: 100%;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    margin: auto;
-    height: 900px;
-  }
-  /* 비주얼 배너이미지 */
-  .b_visual_l,
-  .b_visual_s {
-    display: none;
-  }
-  .b_visual_m {
-    display: block;
+@media screen and (max-width: 1721px) {
+  /* box-txt */
+  .box-txt {
+    position: absolute;
+    top: 490px;
+    left: 541px;
+    transform: translate(-50%, -50%);
   }
 }
-@media screen and (max-width: 390px) {
-  /* 전체영역 */
-  .b_visual {
-    width: 100%;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    margin: auto;
-    height: 900px;
-  }
-  /* 비주얼 배너이미지 */
-  .b_visual_m,
-  .b_visual_l {
+@media screen and (max-width: 768px) {
+  /* 전체영역-반응형 */
+  .visual-de {
     display: none;
   }
-  .b_visual_s {
+  .visual-ta {
     display: block;
   }
+  .visual-mb {
+    display: none;
+  }
+
+
+}
+@media screen and (max-width: 390px) {
+  /* 전체영역-반응형 */
+  .visual-de {
+    display: none;
+  }
+  .visual-ta {
+    display: none;
+  }
+  .visual-mb {
+    display: block;
+  }
+
 }
