--- a/css/b_visual.css
+++ b/css/b_visual.css
@@ -94,7 +94,17 @@
     transform: translate(-50%, -50%);
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 769px) {
+  .b_visual {
+    position: relative;
+    width: 100%;
+    height: 23.44vw;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: auto;
+    /* background-color: red; */
+  }
   /* 전체영역-반응형 */
   .visual-de {
     display: none;
@@ -108,7 +118,17 @@
 
 
 }
-@media screen and (max-width: 390px) {
+@media screen and (max-width: 391px) {
+  .b_visual {
+    position: relative;
+    width: 100%;
+    height: 19.27vw;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: auto;
+    /* background-color: red; */
+  }
   /* 전체영역-반응형 */
   .visual-de {
     display: none;
