--- a/css/d_new.css
+++ b/css/d_new.css
@@ -32,10 +32,10 @@
   color: var(--color--dark--x-l);
 }
 .new-prd-box .prd-category {
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 400;
   color: var(--color--grey--m);
-  margin-top: 8px;
+  margin-top: 9px;
 }
 .new-prd-box .price-box {
   margin-top: 20px;
@@ -92,14 +92,14 @@
 }
 @media screen and (max-width: 900px) {
   .new-prd-box .tag {
-    width: 48%;
+    width: 45%;
     left: -2px;
   }
   .new-prd-box .prd-name {
-    margin-top: 4%;
+    margin-top: 5%;
   }
   .tag-olive {
-    width: 24%;
+    width: 22.5%;
     position: absolute;
     top: 20px;
     left: -2px;
@@ -110,42 +110,65 @@
     margin-top: 2%;
   }
   .tag-olive {
-    width: 24%;
+    width: 22.5%;
     position: absolute;
     top: 20px;
     left: -2px;
   }
 }
 @media screen and (max-width: 650px) {
-  .new-prd-box .tag {
-    width: 40%;
-    left: -2px;
-  }
   .new-prd-box .prd-name {
     margin-top: 3%;
   }
+  .new-prd-box .prd-name {
+    font-size: 17px;
+  }
+  .new-prd-box .prd-category {
+    margin-top: 7px;
+  }
+  .new-prd-box .price{
+    font-size: 19px;
+    margin-bottom: 4px;
+  }
   .tag-olive {
-    width: 20%;
+    width: 22.5%;
   }
 }
 @media screen and (max-width: 529px) {
   .new-prd-box .tag {
-    width: 35%;
+    width: 45%;
     left: -2px;
   }
   .new-prd-box .prd-name {
-    margin-top: 2%;
+    margin-top: 4%;
   }
   .tag-olive {
-    width: 17.5%;
+    width: 22.5%;
   }
 }
 @media screen and (max-width: 420px) {
   .new-prd-box .tag {
-    width: 40%;
+    width: 50%;
     left: -2px;
   }
   .tag-olive {
-    width: 20%;
+    width: 25%;
+  }
+  .new-prd-box .prd-name {
+    margin-top: 3%;
+  }
+  .new-prd-box .review-num {
+    font-size: 12px;
+  }
+  .new-prd-box .prd-name {
+    font-size: 15px;
+  }
+  .new-prd-box .prd-category {
+    font-size: 14px;
+    margin-top: 6px;
+  }
+  .new-prd-box .price{
+    font-size: 18px;
+    margin-bottom: 4px;
   }
 }
