h,g 텍스트 영역 수정 완료, 상세페이지 작업중

--- a/css/g_event.css
+++ b/css/g_event.css
@@ -94,6 +94,9 @@
   .swiper-pagination-bullets.swiper-pagination-horizontal,
   .swiper-paginaton-custom,
   .swiper-pagination-fraction {
-   display: none;
+    display: none;
   }
+  /* .event-txt{
+    font-size: 13px;
+  } */
 }
