--- a/css/detail.css
+++ b/css/detail.css
@@ -1,26 +1,49 @@
 @charset "utf-8";
 @import url(font.css);
 
+body {
+  font-family: "Pretendard";
+}
+
 /* txt 영역 */
 .detail h2 {
-  font-size: 25px;
+  font-size: 20px;
+  color: var(--color--dark--x-l);
 }
+/* [리미티드]러브버거 */
 .dp-name {
-    font-size: var(--font--fontsize--l);
-    font-weight: 700;
+  font-size: 20px;
+  font-weight: 650;
+  color: var(--color--dark--x-l);
+  margin: 5% 0 5% 0;
 }
+/* 상품가격 */
+.dp-price {
+  font-size: 20px;
+  color: var(--color--dark--x-l);
+  font-weight: 650;
+  margin-bottom: 8%;
+}
+/* 기프트 */
+.dp-category {
+  font-size: 17px;
+  color: var(--color--grey--m);
+  margin: 2% 0 8% 0;
+}
+/* inner */
 .detail .wrap-inner {
-  background-color: pink;
+  /* background-color: pink; */
   width: 50%;
   max-width: 1000px;
   margin: auto;
   height: 2000px;
 }
-
+/* 러브버거 상단 */
 .detail-product {
   /* background-color: aqua; */
   display: flex;
 }
+/* 러브버거 썸네일 이미지 */
 .detail-product .dp-img {
   width: 50%;
 }
@@ -29,11 +52,7 @@
   display: block;
   overflow: hidden;
 }
-.dp-txt {
-  width: 50%;
-  margin-left: 3%;
-  /* background-color: blue; */
-}
+/* new, limited 아이콘 */
 .dp-tag-box ul {
   display: flex;
 }
@@ -43,4 +62,90 @@
 .dp-tag-box li img {
   width: 100%;
   display: block;
+}
+/* 러브버거 전체 txt박스 */
+.dp-txt {
+  width: 50%;
+  margin-left: 3%;
+  background-color: antiquewhite;
+}
+/* 별점,리뷰보기 */
+.dp-price-box {
+  width: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 5%;
+  /* background-color: red; */
+}
+.review-num {
+  font-size: var(--font--fonsize--x-x-s);
+  color: var(--color--grey--m);
+  text-decoration: underline;
+}
+/* 수량 */
+.dp-cart p {
+  font-size: 17px;
+  color: var(--color--dark--x-l);
+  margin: 2% 0 4% 0;
+}
+/* 수량버튼 */
+.dp-cart2 {
+  display: flex;
+  width: 50px;
+  background-color: pink;
+}
+.dp-cart2 button {
+  appearance: auto;
+  font-family: "Pretendard";
+  text-rendering: auto;
+  color: var(--color--darkgrey--l);
+  letter-spacing: normal;
+  word-spacing: normal;
+  line-height: normal;
+  text-transform: none;
+  text-indent: 0px;
+  text-shadow: none;
+  display: inline-block;
+  text-align: center;
+  cursor: default;
+  box-sizing: border-box;
+  background-color: buttonface;
+  margin: 0em;
+  padding-block: 1px;
+  padding-inline: 8px;
+  border-width: 1px;
+  border-style: outset;
+  border-color: buttonborder;
+  border-image: initial;
+}
+/* 구매하기 버튼 */
+.dp-buybtn {
+  padding-top: 10%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.dp-buybtn .buy1 {
+  border: 1px solid var(--color--lightgray--s);
+  background-color: #fff;
+  border-radius: 1px;
+  padding: 11px 0 11px 0;
+}
+.dp-buybtn .buy2 {
+  border: 1px solid var(--color--lightgray--s);
+  background-color: var(--color--dark--x-l);
+  border-radius: 1px;
+  padding: 11px 0 11px 0;
+}
+.buy1 a {
+  font-family: "Pretendard";
+  font-weight: 400;
+  font-size: 17px;
+}
+.buy2 a {
+  font-family: "Pretendard";
+  font-weight: 400;
+  font-size: 17px;
+  color: #fff;
 }
