--- a/css/h_service.css
+++ b/css/h_service.css
@@ -6,13 +6,16 @@
   font-size: 18px;
   color: var(--color--dark--x-l);
   font-weight: bold;
-  margin: 2% 0 5% 0;
+  margin: 5% 0 4% 0;
+  text-align: left;
   /* letter-spacing: -2px; */
 }
 .service-txt {
-  font-size: var(--font--fonsize--x-s);
-  color: var(--color--dark--x-l);
-  line-height: 1.2rem;
+  font-size: 15px;
+  font-weight: 500;
+  color: var(--color--grey--m);
+  /* line-height: 1.2rem; */
+  text-align: left;
   /* letter-spacing: -1px; */
 }
 
@@ -46,7 +49,9 @@
   background-color: pink;
 }
 .service-sub {
-  padding: 2% 0 0 2%;
+  display: block;
+  margin-left: 2%;
+  /* background-color: aqua; */
 }
 
 /* 스와이퍼 버튼 위치 조정 */
@@ -106,11 +111,18 @@
     /* background-color: red; */
   }
   .service-sub {
-    padding-bottom: 20%;
-    /* background-color: red; */
-    }
+    display: block;
+    margin-left: 0;
+    /* background-color: aqua; */
+  }
+  .service-title {
+    margin: 5% 0 2% 0;
+  }
+  .h_service .wrap-inner {
+    margin-bottom: 17%;
+  }
 }
-@media screen and (max-width: 389px) {
+@media screen and (max-width: 390px) {
   .g_event .wrap-inner .swiper-horizontal > .swiper-pagination-bullets,
   .swiper-pagination-bullets.swiper-pagination-horizontal,
   .swiper-paginaton-custom,
@@ -121,11 +133,18 @@
     width: 100%;
     /* background-color: red; */
   }
-  .service-sub {
-  padding-bottom: 20%;
-  /* background-color: red; */
-  }
-  .service-txt{
+  /* .service-txt {
     font-size: 13px;
+  } */
+  .service-sub {
+    display: block;
+    margin-left: 0;
+    /* background-color: aqua; */
+  }
+  .service-title {
+    margin: 10% 0 3% 0;
+  }
+  .h_service .wrap-inner {
+    margin-bottom: 20%;
   }
 }
