--- a/css/a_header.css
+++ b/css/a_header.css
@@ -1,5 +1,4 @@
 @charset "utf-8";
-
 li ul {
   list-style: none;
 }
@@ -8,7 +7,6 @@ body {
   height: 100%; /* 뷰포트 높이를 100%로 설정 */
   margin: 0;
   padding: 0;
-
 }
 /* ==========전체영역============ */
 .a_header {
@@ -28,7 +26,7 @@ body {
   justify-content: space-between;
   z-index: 1;
 }
-/* 왼쪽영역 - 로고/메뉴 */
+/* ==========왼쪽영역 - 로고/메뉴========== */
 .header-left {
   width: 80%;
   height: 40px;
@@ -44,21 +42,28 @@ body {
 .a_header > .wrap-inner > .logo > img {
   width: 100%;
 }
-/* =====메뉴 전체영역===== */
+/* 메뉴 전체영역 */
 .header-left .nav {
   display: flex;
   position: relative;
   align-items: center;
   width: 50%;
 }
+/* 카테고리와 GNB 호버 효과 */
+.cartegori:hover .depth,
+.gnb > li:hover .depth2 {
+  display: block;
+}
 
-/* ====카테고리 영역 - .cartegori/.depth==== */
+/* 1. 카테고리 영역 - .cartegori (ul)> .depth (li)*/
 .cartegori {
   width: 25%;
   text-align: center;
   position: relative;
 }
-
+.cartegori > li {
+  display: block;
+}
 .cartegori > li:hover .depth {
   display: flex;
 }
@@ -70,7 +75,7 @@ body {
   color: var(--color--dark--x-l);
 }
 
-/* 카테고리 - depth */
+/* 카테고리 > .depth (li) */
 .depth {
   position: absolute;
   top: 40px;
@@ -84,9 +89,7 @@ body {
   justify-content: center;
   padding-top: 10px;
 }
-.cartegori > li {
-  display: block;
-}
+
 .depth > li {
   width: calc((100% - 28%) / 8);
   margin-bottom: 2%;
@@ -119,7 +122,7 @@ body {
   display: block;
 }
 
-/* =====메인메뉴==== */
+/* 2. 그외 메뉴 영역 - .gnb (ul)> .depth2 (li)*/ 
 .gnb {
   width: 80%;
   position: relative;
@@ -137,8 +140,7 @@ body {
   font-size: var(--font--fontsize--x-s);
   color: var(--color--dark--x-l);
 }
-
-/* 메인>서브메뉴 - .depth2 */
+/* 메인>서브메뉴 > .depth2 (li) */
 .depth2 {
   width: 100%;
   position: absolute;
@@ -147,7 +149,6 @@ body {
   border: 1px solid #dddddd;
   display: none;
 }
-
 .depth2 > li {
   padding: 13px 0;
 }
@@ -161,7 +162,7 @@ body {
   font-weight: 500;
 }
 
-/* 오른쪽영역 - 아이콘 */
+/* ==========오른쪽영역 - 아이콘========== */
 /* 사용자 아이콘 */
 .a_header > .wrap-inner > .user {
   display: flex;
@@ -176,14 +177,10 @@ body {
 .a_header > .wrap-inner > .user > li > a > img {
   width: 80%;
 }
-/* 카테고리와 GNB 호버 효과 */
-.cartegori:hover .depth,
-.gnb > li:hover .depth2 {
-  display: block;
-}
 
-/* =========모바일용 메뉴 =========*/
-/* 아이콘 모바일 메뉴 */
+
+/* ==========모바일용 메뉴 ==========*/
+/* 햄버거 메뉴 버튼 */
 .mb-xi {
   width: 40px;
   cursor: pointer;
@@ -192,12 +189,10 @@ body {
 .mb-xi > img {
   width: 100%;
 }
-
-/* close 모바일 */
+/* 햄버거 메뉴 버튼 > close 모바일 */
 .mb-close {
   display: none;
 }
-
 /* 모바일 메뉴 */
 .wrap {
   position: relative;
@@ -214,9 +209,8 @@ body {
   transition: all 0.5s;
   opacity: 0;
 }
-
+/* 모바일 메뉴 + inner */
 .mb-nav .wrap-inner{
-  
   padding: 0 20px;
   height: 700px;
   overflow-y: auto;
@@ -242,16 +236,17 @@ body {
 .a_header .wrap-inner {
   width: 90%;
 }
-
 .mb-nav .wrap-inner {
   width: 90%;
 }
+/* 1. 모바일 카테고리 >서브메뉴, 
+mb-cartegori(ul) > mb-depth (li) */
 .mb-depth {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   gap: 5%;
-  padding: 5% 10%;
+  padding: 0% 1%;
 }
 .mb-depth > li {
   width: calc((100% - 15%) / 4);
@@ -262,25 +257,30 @@ body {
   align-items: center;
   gap: 10px;
   padding: 10%;
-  font-size: var(--font--fonsize--x-x-s);
+  font-size: 15px;
 }
 .mb-depth > li > a img {
   width: 100%;
   display: block;
 }
-/* 모바일메뉴 */
+/* 2. 모바일 그외메뉴 >서브메뉴, 
+mb-gnb(ul) > mb-depth2 (li) */
 .mb-gnb {
   padding: 20px 0;
 }
 .mb-cartegori > li > a,
 .mb-gnb > li > a {
-  padding: 20px 0;
+  padding: 30px 0;
+  font-size: 20px;
+  font-weight: 700;
 }
 .mb-depth {
   gap: 10px;
 }
 .mb-depth > li > a {
   padding: 5%;
+  font-size: 15px;
+  font-weight: 500;
 }
 .mb-depth2 {
   display: flex;
@@ -295,7 +295,8 @@ body {
 }
 .mb-depth2 > li > a {
   line-height: 22px;
-  font-size: var(--font--fonsize--x-x-s);
+  font-size: 15px;
+  font-weight: 500;
 }
 /* ===========반응형페이지========== */
 @media screen and (max-width: 1920px) {
@@ -306,11 +307,9 @@ body {
     cursor: pointer;
     display: block;
   }
-
   .header-left .nav {
     display: none;
   }
-
   /* 모바일 메뉴 보이기 */
   .mb-nav {
     display: block;
@@ -323,16 +322,11 @@ body {
   }
 }
 
-@media screen and (max-width: 769px) {
-  /* 768px 이상일 때 메뉴와 아이콘 숨기기 */
-  .mb-xi,
-  .mb-nav {
-    display: none !important;
-  }
-}
-
 @media screen and (max-width: 391px) {
   /* 모바일메뉴 */
+  .mb-xi{
+    margin-right: 3%;
+  }
   .mb-depth > li > a {
     padding: 0 !important;
   }
