--- a/css/c_best.css
+++ b/css/c_best.css
@@ -31,10 +31,14 @@
   top: 0;
   left: 0;
   font-size: 21px;
+  text-align: center;
   color: var(  --color--darkgrey--l);
   font-weight: 600;
   background-color: var( --color--lightgray--s);
-  padding: 10px 15px;
+  width: 2.5rem;
+  height: 2.5rem;
+  line-height: 2.5rem;
+  /* padding: 10px 15px; */
 }
 /* .best-prd-box #best-thum-1::before {
   content: "1";
@@ -140,6 +144,7 @@
   .best-prd-box .prd-name {
     margin-top: 2%;
   }
+  
 }
 @media screen and (max-width: 650px) {
   .best-prd-box .prd-name {
@@ -155,6 +160,11 @@
     font-size: 19px;
     margin-bottom: 4px;
   }
+  .number{
+    width: 2.4rem;
+    height: 2.4rem;
+    line-height: 2.4rem;
+  }
 }
 @media screen and (max-width: 529px) {
   .best-prd-box .tag {
@@ -164,6 +174,7 @@
   .best-prd-box .prd-name {
     margin-top: 4%;
   }
+
 }
 @media screen and (max-width: 420px) {
   .best-prd-box .tag {
@@ -190,4 +201,10 @@
   svg {
     width: 70px;
   }
+  .number {
+    font-size: 16px;
+    width: 2rem;
+    height: 2rem;
+    line-height: 2rem;
+}
 }
