--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 .login-container {
-  padding: 130px 0px 0px;
+  padding: 130px 0px 200px;
 }
 .login-box {
   width: 420px;
@@ -18,7 +18,7 @@
   width: 100%;
 }
 .login-box-top h3 {
-    font-weight: 700;
+  font-weight: 700;
   font-size: 21px;
   color: var(--color--dark--x-l);
   text-align: left;
@@ -36,37 +36,98 @@
   border-bottom: 1px solid #757575; /* 아래쪽에만 테두리 추가 */
   padding: 18px 10px;
 }
-.id-save{
-    display: flex;
-    margin-top: 16px;
-    margin-left: 10px;
-    
+.id-save {
+  display: flex;
+  margin-top: 16px;
+  margin-left: 10px;
 }
-#idSave{
-    width: 16px;
-    margin-right: 5px;
+#idSave {
+  width: 16px;
+  margin-right: 5px;
 }
-.login-btn{
-    width: 100%;
-    height: 60px;
-    border: none;
-    background-color: #222222;
-    border-radius: 3px;
+.login-btn {
+  width: 100%;
+  height: 60px;
+  border: none;
+  background-color: #222222;
+  border-radius: 3px;
+  color: #ffffff;
+  margin-top: 18px;
+  font-family: "Pretendard";
+  font-size: 18px;
+  font-weight: 400;
+}
+.login_intro {
+  margin: 30px 0;
+}
+.login_sch {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.login_sch li {
+  border-right: 1px solid #333;
+  font-size: 16px;
+}
+.login_sch li:last-child {
+  border-right: none;
+}
+.login-orline {
+  max-width: 600px;
+  border-top: 1px solid #ccc;
+  position: relative;
+  margin: 58px auto 58px;
+}
+.login-orline span {
+  display: block;
+  font-size: 14px;
+  color: #aaa;
+  width: 54px;
+  position: absolute;
+  top: -9px;
+  left: calc(50% - 27px);
+  background: #fff;
+  color: #aaa;
+}
+.kakao-login-btn {
+  position: relative;
+  width: 100%;
+  height: 60px;
+  border: none;
+  background-color: #fee500;
+  border-radius: 3px;
+ 
+  font-family: "Pretendard";
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 60px;
+}
+.kakao-login-btn a{
+    color: #381e1f;
+}
+.kakao-login-btn a img {
+  position: absolute;
+  top: 18px;
+  left: 130px;
+}
+.naver-login-btn {
+  position: relative;
+  width: 100%;
+  height: 60px;
+  border: none;
+  background-color: #03c75a;
+  border-radius: 3px;
+  
+  font-family: "Pretendard";
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 60px;
+}
+.naver-login-btn a{
     color: #ffffff;
-    margin-top: 18px;
-    font-family: "Pretendard";
-    font-size: 18px;
-    font-weight: 400;
 }
-.login_intro{
-    margin: 30px 0;
-}
-.login_sch{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-}
-.login_sch li{
-    border-right: 1px solid #333;
+.naver-login-btn a img {
+  position: absolute;
+  top: 12px;
+  left: 130px;
 }
