--- a/css/login.css
+++ b/css/login.css
@@ -27,7 +27,7 @@
   margin-top: 80px;
   /* background-color: thistle; */
 }
-#login-input {
+#id-input, #pw-input {
   font-family: "Pretendard";
   font-size: 16px;
   font-weight: 400;
